--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,9 @@ body {
 }
 
 .container {
-    background-color: #242424;
+    background-color: #422d21;
     padding: 20px;
-    border-radius: 30px;
+    border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
     width: 430px;
     text-align: center;
@@ -47,7 +47,7 @@ input {
 
 button {
     font-family: JetBrains Mono;
-    background-color: #6f00ff;
+    background-color: #725c47;
     color: #ffffff;
     padding: 10px 15px;
     border: none;
@@ -57,11 +57,11 @@ button {
 }
 
 button:hover {
-    background-color: #00ff15;
+    background-color: #00bb10;
 }
 
 #datetime {
     margin-top: 20px;
     font-size: 12px;
-    color: #ffae00;
+    color: #fffefd;
 }
